--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <!-- Content with Large Brackets on Each Side -->
     <div class="content-wrapper">
-        <div class="bracket">[&nbsp;</div>
+        <div class="bracket">[</div>
         <div class="content">
             <h1>MATRIXITY</h1>
             <p>The working solution, written in matrix.</p>
