--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             top: 50%;
             transform: translateY(-50%);
             color: #b0c4de;
-            padding: 0 2%;
+            padding: 0 0%;
         }
         .bracket {
             font-size: 10vw;
@@ -48,7 +48,7 @@
         .content {
             text-align: center;
             color: #b0c4de;
-            margin: 0 100px; /* 대괄호 사이 간격을 100px로 설정 */
+            margin: 0 50px; /* 대괄호 사이 간격을 100px로 설정 */
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -56,7 +56,7 @@
         .content h1 {
             font-size: 4em;
             letter-spacing: 0.5em;
-            color: #dcdcdc;
+            color: #c6c6c6;
             font-weight: 100;
             margin: 0;
         }
@@ -83,7 +83,7 @@
         @media (max-width: 480px) {
             .content h1 {
                 font-size: 2em;
-                letter-spacing: 0.2em;
+                letter-spacing: 0em;
             }
             .content p {
                 font-size: 0.9em;
@@ -102,7 +102,7 @@
     <div class="content-wrapper">
         <div class="bracket">[</div>
         <div class="content">
-            <h1>MATRIXITY</h1>
+            <h1>&nbsp;MATRIXITY</h1>
             <p>The working solution, written in matrix.</p>
         </div>
         <div class="bracket">]</div>
@@ -119,8 +119,8 @@
             amount: 140,
             speed: 100,
             size: 15,
-            minLength: 4,
-            maxLength: 10,
+            minLength: 5,
+            maxLength: 11,
             firstColor: '#fff',
             color: '#046',
             initialChars: "MATRIXYmatrixy" 
