--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div class="content-wrapper">
         <div class="bracket">[</div>
         <div class="content">
-            <h1>&nbsp;MATRIXITY</h1>
+            <h1>&nbsp;&nbsp;MATRIXITY</h1>
             <p>The working solution, written in matrix.</p>
         </div>
         <div class="bracket">]</div>
